# GMGR

./: .gitignore  Cargo.toml  Cross.toml  README.txt  config.json  setup-libgpiod.sh
src/: config.rs  error.rs  gpio.rs  lib.rs  main.rs  routes.rs
src/backend/: libgpiod.rs  mock.rs  mod.rs
tests/: api_tests.rs
