[package]
name = "gmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

[dependencies.libgpiod]
version = "1.0.0"
optional = true

[features]
default = ["mock-gpio"]
mock-gpio = []
hardware-gpio = ["libgpiod"]

[dev-dependencies]
actix-rt = "2.11.0"
serde_json = "1.0.147"
