[package]
name = "gmgr"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.12.1", features = ["macros"] }
actix-ws = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
parking_lot = "0.12"
rustc-hash = "2.1.1"
log = "0.4.29"
env_logger = "0.11.8"

[dependencies.libgpiod]
version = "1.0.0"
optional = true

[features]
default = ["hardware-gpio"]
mock-gpio = []
hardware-gpio = ["libgpiod"]

[dev-dependencies]
actix-rt = "2.11.0"
serde_json = "1.0.147"
